tests/errors/generic_type_wrong_arity.dang
# Generic type applied with wrong number of arguments

type Box[a] {
  pub value: a
}

pub b: Box[Int!, String!]! = Box(1)
